vpc.tf
resource "aws_vpc" "mi_vpc" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "public_subnet" {
  vpc_id = aws_vpc.mi_vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"
  map_public_ip_on_launch = true
}
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.mi_vpc.id
}
resource "aws_route_table" "table" {
    vpc_id = aws_vpc.mi_vpc.id

    route{
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id

    }
}
resource "aws_route_table_association" "asoc" {
    subnet_id = aws_subnet.public_subnet.id
    route_table_id = aws_route_table.table.id
}
